# nigeria-states-lgas-py

./: RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
