[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nigeria-states-lgas"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["nigeria", "states", "lgas", "geodata"]

[tool.setuptools]
packages = { find = {} }
